# wvbridge

./: .gitignore  README.MD  README_ZH.MD  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/actions/setup-base/: action.yml
.github/actions/test-android/: action.yml
.github/actions/test-ios/: action.yml
.github/actions/test-jvm/: action.yml
.github/workflows/: dokka.yaml  release.yaml  test.yaml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: kotlin.kt  platform.kt  publish.kt  version.kt
core/: Module.md  build.gradle.kts
core/src/androidMain/kotlin/top/kagg886/wvbridge/: controller.android.kt  state.android.kt  webview.android.kt
core/src/androidMain/kotlin/top/kagg886/wvbridge/config/: WebViewConfig.android.kt
core/src/commonMain/kotlin/top/kagg886/wvbridge/: controller.kt  loading.kt  navigator.kt  state.kt  webview.kt
core/src/commonMain/kotlin/top/kagg886/wvbridge/bridge/: CloseHandle.kt  JavaScriptBridge.kt  WebMessageConsumer.kt  (+1 more)
core/src/iosMain/interop/: protocol.def
core/src/iosMain/interop/include/: protocol.h
core/src/iosMain/kotlin/top/kagg886/wvbridge/: controller.ios.kt  state.ios.kt  webview.ios.kt
core/src/jvmMain/kotlin/top/kagg886/wvbridge/: controller.jvm.kt  state.jvm.kt  webview.jvm.kt
docs/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
docs/scripts/: copy-dokka.mjs
docs/src/content/docs/en/: configuration.mdx  controller.mdx  index.mdx  installation.mdx  interceptor.mdx  javascript-interop.mdx  jsbridge-utilities.mdx  known-issues.mdx  navigator.mdx  quick-start.mdx
docs/src/content/docs/zh/: configuration.mdx  controller.mdx  index.mdx  installation.mdx  interceptor.mdx  javascript-interop.mdx  jsbridge-utilities.mdx  known-issues.mdx  navigator.mdx  quick-start.mdx
docs/src/pages/: index.astro
gradle/: libs.versions.toml
jsbridge/: Module.md  build.gradle.kts
platform/common/native/: CMakeLists.txt
platform/common/native/include/wvbridge/: java_caller.h  java_runtime.h  javascript.h  logger.h  native_bridge.h  utils.h  webview-platform-settings.h
platform/common/native/src/: can-go-back-change-listener.cpp  can-go-forward-change-listener.cpp  java_caller.c  java_runtime.c  javascript.cpp  listener_support.cpp  listener_support.h  logger.cpp  navigation-interceptor-listener.cpp  page-loading-end-listener.cpp  page-loading-progress-listener.cpp  page-loading-start-listener.cpp  url-change-listener.cpp  utils.c  webview-fatal-error-listener.cpp  webview-platform-settings.cpp
platform/platform-linux/: build.gradle.kts
platform/platform-linux/native/: CMakeLists.txt
platform/platform-linux/native/src/: gtk.cpp  history_listener.cpp  history_listener.h  java_listener.cpp  java_listener.h  libs.cpp  navigation.cpp  navigation.h  page_loading.cpp  page_loading.h  progress.cpp  progress.h  url_listener.cpp  url_listener.h  utils.cpp
platform/platform-linux/native/src/jni/: close0.cpp  evaluate-script.cpp  go-back.cpp  go-forward.cpp  init-and-attach.cpp  javascript-helpers.cpp  javascript-helpers.h  javascript.cpp  load-url.cpp  refresh.cpp  register-document-start-hook.cpp  register-web-message-handler.cpp  request-focus0.cpp  stop.cpp  unregister-document-start-hook.cpp  unregister-web-message-handler.cpp  update.cpp
platform/platform-linux/native/src/state/: webview_context.h
platform/platform-linux/native/src/utils/: gtk.cpp  gtk.h  libs_helpers.cpp  libs_helpers.h  utils.cpp  utils.h  webview_events.cpp  webview_events.h  webview_lifecycle.cpp  webview_lifecycle.h  x11_embed.cpp  x11_embed.h
platform/platform-macos/: build.gradle.kts
platform/platform-macos/native/: CMakeLists.txt
platform/platform-macos/native/src/: history_listener.h  history_listener.mm  java_callback.h  java_callback.mm  libs.mm  navigation.h  navigation.mm  page_loading.h  page_loading.mm  progress.h  progress.mm  ui_delegate.h  ui_delegate.mm  url_listener.h  url_listener.mm  utils.mm
platform/platform-macos/native/src/jni/: close0.mm  evaluate-script.mm  go-back.mm  go-forward.mm  init-and-attach.mm  javascript-helpers.h  javascript-helpers.mm  javascript.mm  load-url.mm  refresh.mm  register-document-start-hook.mm  register-web-message-handler.mm  request-focus0.mm  stop.mm  unregister-document-start-hook.mm  unregister-web-message-handler.mm  update.mm
platform/platform-macos/native/src/state/: webview_context.h
platform/platform-macos/native/src/utils/: libs_helpers.h  libs_helpers.mm  ui_delegate.mm  utils.h  utils.mm  webview_events.h  webview_events.mm
platform/platform-windows/: build.gradle.kts
platform/platform-windows/native/: .gitignore  CMakeLists.txt  wvbridge.sln  wvbridge.vcxproj
platform/platform-windows/native/src/: history_events.cpp  history_events.h  java_listener.cpp  java_listener.h  libs.cpp  page_loading_events.cpp  page_loading_events.h  thread.cpp  thread.h  url_events.cpp  url_events.h  utils.cpp  utils.h  webview2_callback.h  webview_context.h  webview_events.cpp
platform/platform-windows/native/src/jni/: close0.cpp  evaluate-script.cpp  go-back.cpp  go-forward.cpp  init-and-attach.cpp  javascript-helpers.cpp  javascript-helpers.h  javascript.cpp  load-url.cpp  refresh.cpp  register-document-start-hook.cpp  register-web-message-handler.cpp  request-focus0.cpp  stop.cpp  unregister-document-start-hook.cpp  update.cpp
platform/platform-windows/native/src/state/: webview_context.h
platform/platform-windows/native/src/utils/: libs_helpers.cpp  libs_helpers.h  thread.cpp  utils.cpp  utils.h  webview2_callback.h  webview_events.cpp  webview_events.h
sample/awt/: build.gradle.kts
sample/awt/src/main/kotlin/: main.kt
sample/compose/androidApp/: build.gradle.kts
sample/compose/androidApp/src/main/: AndroidManifest.xml
sample/compose/desktopApp/: build.gradle.kts
sample/compose/desktopApp/src/main/kotlin/: main.kt
sample/compose/iosApp/iosApp.xcodeproj/: project.pbxproj
sample/compose/sharedUI/: build.gradle.kts
sample/compose/webApp/: build.gradle.kts
sample/jsbridge/: build.gradle.kts
sample/jsbridge/src/main/kotlin/: main.kt
(+38 files in other folders)
